Increase contrast on annotation-pane close button (fixes #37)

--- a/public/sass/modules/_annotation.scss
+++ b/public/sass/modules/_annotation.scss
@@ -137,6 +137,7 @@
 
     .close-button {
         float: right;
+        color: #fff;
         font-family: $fancy-font;
         font-style: italic;
         line-height: (2 * $line-height-computed);
